fix icon spacing

--- a/index.html
+++ b/index.html
@@ -340,14 +340,16 @@
                 </div>
               </div>
               <div class="col-4 col-6-medium col-6-small">
-                <div class="firebase">
+                <div class="icon firebase">
                   <img src="./svg/firebase.svg" />Firebase
                 </div>
-                <div class="postgresql">
+                <div class="icon postgresql">
                   <img src="./svg/postgres.svg" />PostgresQL
                 </div>
-                <div class="mongo"><img src="./svg/mongo.svg" />MongoDB</div>
-                <div class="mySQL"><img src="./svg/msql.svg" />MySQL</div>
+                <div class="icon mongo">
+                  <img src="./svg/mongo.svg" />MongoDB
+                </div>
+                <div class="icon mySQL"><img src="./svg/msql.svg" />MySQL</div>
               </div>
               <div class="col-4 col-6-medium col-6-small">
                 <div class="icon brands fa-express">Express</div>
@@ -366,10 +368,11 @@
                 </div>
               </div>
               <div class="col-3 col-6-medium col-6-small">
-                <div class="heroku">
-                  <img src="./svg/heroku.svg" alt="" /> Heroku
+                <div class="icon heroku">
+                  <img src="./svg/heroku.svg" alt="" />
+                  Heroku
                 </div>
-                <div class="netlify">
+                <div class="icon netlify">
                   <img src="./svg/netlify.svg" alt="" />Netlify
                 </div>
                 <div class="icon brands fa-aws">AWS</div>
@@ -377,15 +380,15 @@
               <div class="col-3 col-6-medium col-6-small">
                 <div class="icon brands fa-github-square">Github</div>
                 <div class="icon brands fa-gitkraken">Gitkraken</div>
-                <div class="vscode">
+                <div class="icon vscode">
                   <img src="./svg/vscode.svg" alt="" />VS Code
                 </div>
               </div>
               <div class="col-3 col-6-medium col-6-small">
-                <div class="postman">
+                <div class="icon postman">
                   <img src="./svg/postman.svg" alt="" />Postman
                 </div>
-                <div class="beekeepr">
+                <div class="icon beekeepr">
                   <img src="./svg/beekeeper.svg" alt="" />Beekeeper Studio
                 </div>
                 <div class="icon brands fa-npm">NPM</div>
