add ticketgeek project

--- a/index.html
+++ b/index.html
@@ -316,6 +316,70 @@
               </div>
             </div>
             <hr />
+            <br />
+            <div class="row">
+              <div class="col-12">
+                <h3>TicketGeek</h3>
+                <span> JavaScript, jquery, HTML, Bootstrap 5 </span>
+              </div>
+              <div class="col-12">
+                This project is used to compare concert prices between
+                Ticketmaster and SeatGeek. Search parameters are utilized by
+                both API services and aggregated into one output per event using
+                basic DOM manipulation. Resulting data can be sorted by price or
+                in alphabetical order.
+              </div>
+            </div>
+            <hr />
+            <div class="row">
+              <div class="col-12">
+                <a href="#" class="image fit"
+                  ><img src="images/ticketgeek.png" alt=""
+                /></a>
+              </div>
+            </div>
+            <br />
+            <div class="row">
+              <div class="col-3"></div>
+              <div class="col-4">
+                <div class="row">
+                  <h4>
+                    <a
+                      id="gitHubIcon"
+                      href="https://github.com/annalise-h/event-search-app"
+                      style="text-decoration: none; color: #777"
+                      ><i
+                        htmlFor="gitHubIcon"
+                        class="icon brands fa-github"
+                      ></i>
+                      Code</a
+                    >
+                  </h4>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="row">
+                  <h4 style="justify-content: center">
+                    <a
+                      href="https://annalise-h.github.io/event-search-app/"
+                      style="
+                        text-decoration: none;
+                        color: #777;
+                        vertical-align: middle !important;
+                      "
+                    >
+                      <img
+                        class="icon brands"
+                        src="./svg/icons8-browser-24.png"
+                        alt=""
+                      />
+                      Live
+                    </a>
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <hr />
           </section>
         </article>
 
