--- a/index.html
+++ b/index.html
@@ -418,6 +418,8 @@
               <div class="col-4 col-6-medium col-6-small">
                 <div class="icon brands fa-express">Express</div>
                 <div class="icon brands fa-node-js">NodeJS</div>
+                <div class="icon brands fa-python">Python</div>
+                <div class="icon brands fa-powershell"><img src="./svg/powershell.svg" />Powershell</div>
               </div>
             </div>
             <br />
